<resources>
    <string name="app_name">CTUDY</string>

    <!-- 공통 -->
    <string name="confirm_text">확인</string>
    <string name="cancel_text">취소</string>
    <string name="network_etc_error">에러가 발생하였습니다. \n잠시후 재시도 해주세요</string>
    <string name="network_error">통신 중 에러가 발생하였습니다. \n 잠시후 재시도 해주세요</string>
    <string name="expire_login">로그인 정보가 만료되었습니다. \n재로그인 해주세요.</string>

    <!-- 로그인 -->
    <string name="login_id_text">아이디(이메일)</string>
    <string name="login_pw_text">비밀번호</string>
    <string name="login_pw_confirm_text">비밀번호 확인</string>
    <string name="login_text">로그인</string>
    <string name="logout_text">로그아웃</string>
    <string name="login_auto_text">자동 로그인</string>
    <string name="login_sign_in_text">회원가입</string>
    <string name="login_empty_id">아이디를 입력해주세요</string>
    <string name="login_empty_password">비밀번호를 입력해주세요</string>
    <string name="login_verification_id">올바른 아이디 형식으로 입력해주세요</string>
    <string name="login_error_text">로그인에 실패하였습니다.</string>

    <!-- 회원가입 -->
    <string name="sign_in_text">회원가입</string>
    <string name="sign_in_name">이름</string>
    <string name="sign_in_btn_text">가입하기</string>
    <string name="sign_in_duple_text">중복확인</string>
    <string name="sign_in_duple_confirm_text">아이디 중복확인이 필요합니다</string>
    <string name="sign_in_confirm_password">비밀번호를 확인해주세요</string>
    <string name="sign_in_confirm_name">이름을 입력해주세요</string>
    <string name="sign_in_success">회원가입이 완료되었습니다.</string>
    <string name="sign_in_fail">회원가입에 실패하였습니다.</string>
    <string name="sign_in_duple_confirm_success">사용 가능한 아이디입니다.</string>
    <string name="sign_in_duple_confirm_fail">중복된 아이디가 존재합니다.</string>

    <!-- 스터디 룸 등록 -->
    <string name="enroll_study_room_title_text">스터디 룸 등록</string>
    <string name="enroll_study_room_image_text">이미지 등록</string>
    <string name="enroll_study_room_name_text">스터디 이름</string>
    <string name="enroll_study_room_text">등록</string>
    <string name="enroll_study_room_success">스터디 룸 등록되었습니다.</string>
    <string name="enroll_study_room_fail">스터디 룸 등록에 실패하였습니다.</string>
    <string name="enroll_study_room_next_text">다음</string>

    <!-- 스터디 룸 상세-->
    <string name="study_room_detail_delete_text">삭제</string>
    <string name="study_room_detail_modify_text">수정</string>
    <string name="study_room_detail_coupon_publish">쿠폰 발행</string>
    <string name="study_room_detail_my_coupon">내 쿠폰</string>

    <!-- 스터디 룸 수정 -->
    <string name="study_room_modify_title_text">스터디 룸 수정</string>
    <string name="study_room_modify_name_text">이름</string>
    <string name="study_room_modify_name_hint">이름을 입력해주세요</string>
    <string name="study_room_modify_text">수정</string>
    <string name="study_room_modify_success_text">수정이 완료되었습니다</string>
    <string name="study_room_modify_fail_text">수정에 실패하였습니다</string>

    <!-- 스터디 룸 수정 -->
    <string name="study_room_delete">삭제하시겠습니까?</string>
    <string name="study_room_delete_success">삭제되었습니다</string>
    <string name="study_room_delete_fail">삭제에 실패하였습니다.</string>
    
    <!-- 스터디 멤버 등록 -->
    <string name="study_room_member_enroll_title">멤버 등록</string>
    <string name="study_room_member_enroll_search">검색</string>
    <string name="study_room_member_enroll">만들기</string>
</resources>