<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/app_name"
            android:textColor="@color/main_bg_color"
            android:textSize="@dimen/text_size_30"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_id_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_50"
            android:layout_marginRight="@dimen/dp_size_50"
            android:background="@drawable/editbox_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_id_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_size_15"
                android:background="@null"
                android:hint="@string/login_id_text"
                android:paddingTop="@dimen/dp_size_15"
                android:paddingBottom="@dimen/dp_size_15"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_pw_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_50"
            android:layout_marginTop="@dimen/dp_size_5"
            android:layout_marginRight="@dimen/dp_size_50"
            android:background="@drawable/editbox_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_id_edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_pw_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_size_15"
                android:background="@null"
                android:hint="@string/login_pw_text"
                android:paddingTop="@dimen/dp_size_15"
                android:paddingBottom="@dimen/dp_size_15"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/auto_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_50"
            android:layout_marginTop="@dimen/dp_size_10"
            android:layout_marginRight="@dimen/dp_size_50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pw_edit_layout">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/auto_login_chekbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_auto_text"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintBaseline_toBaselineOf="@+id/auto_login_chekbox"
                app:layout_constraintLeft_toRightOf="@+id/auto_login_chekbox" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_50"
            android:layout_marginTop="@dimen/dp_size_10"
            android:layout_marginRight="@dimen/dp_size_50"
            android:background="@drawable/main_bg_button_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auto_login_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_size_10"
                android:paddingBottom="@dimen/dp_size_10"
                android:text="@string/login_text"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_50"
            android:layout_marginTop="@dimen/dp_size_15"
            android:layout_marginRight="@dimen/dp_size_50"
            android:text="@string/login_sign_in_text"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
