<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/modify_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_size_15"
        android:layout_marginTop="@dimen/dp_size_10"
        android:layout_marginRight="@dimen/dp_size_15"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/study_room_modify_title_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_17"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/modify_close_btn"
            android:layout_width="@dimen/dp_size_20"
            android:layout_height="@dimen/dp_size_20"
            android:src="@drawable/popupclose" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_size_1"
        android:layout_marginTop="@dimen/dp_size_10"
        android:background="@color/basic_line_color"
        app:layout_constraintTop_toBottomOf="@+id/modify_title_layout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/modify_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_size_20"
        android:layout_marginTop="@dimen/dp_size_30"
        android:layout_marginRight="@dimen/dp_size_20"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/modify_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_room_modify_name_text"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_size_15"
            android:layout_marginTop="@dimen/dp_size_3"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/modify_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/study_room_modify_name_hint"
                android:textColor="@color/black"
                android:textColorHint="@color/basic_hint_text_color2"
                android:textSize="@dimen/text_size_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_size_1"
                android:layout_marginTop="@dimen/dp_size_3"
                android:background="@color/basic_hint_text_color2" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/modify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_size_30"
        android:background="@color/main_bg_color"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/modify_name_layout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_size_10"
            android:text="@string/study_room_modify_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_15" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>