<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.toy.project.ctudy.viewmodel.MemberEnrollViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/whole_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MemberEnrollActivity">

        <com.toy.project.ctudy.view.HeaderView
            android:id="@+id/header_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/member_enroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_view">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/member_enroll_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_room_member_enroll_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/member_enroll_search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_20"
                android:background="@drawable/search_editbox_layout"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_size_10"
                android:paddingTop="@dimen/dp_size_5"
                android:paddingBottom="@dimen/dp_size_5"
                app:layout_constraintTop_toBottomOf="@+id/member_enroll_title">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/dp_size_25"
                    android:layout_height="@dimen/dp_size_25"
                    tools:srcCompat="@android:drawable/ic_menu_search" />

                <EditText
                    android:id="@+id/member_enroll_search_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_size_5"
                    android:background="@null"
                    android:hint="@string/study_room_member_enroll_search"
                    android:textSize="@dimen/text_size_13" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/member_enroll_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_size_20"
                app:layout_constraintTop_toBottomOf="@+id/member_enroll_search_layout" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/member_enroll_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_30"
            android:layout_marginRight="@dimen/dp_size_30"
            android:layout_marginBottom="@dimen/dp_size_50"
            android:background="@drawable/round_main_bg_box"
            android:gravity="center"
            android:onClick="@{()->viewModel.enrollRoomInfo()}"
            app:layout_constraintBottom_toBottomOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_size_15"
                android:layout_marginBottom="@dimen/dp_size_15"
                android:text="@string/study_room_member_enroll"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
